--- a/xjlib/src/main/res/values/strings.xml
+++ b/xjlib/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
+<!--
+  ~ Copyright (c) 2017 xjliao.me created by xjliao
+  ~ ProjectName: xjl
+  ~ ModuleName: xjlib
+  ~ FileName: strings.xml
+  ~ ClassName: strings.xml
+  ~ LastModified: 10/11/17 10:58 AM
+  -->
+
 <resources>
     <string name="app_name">xjlib</string>
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
 </resources>
