--- a/xjlib/src/main/res/values/strings.xml
+++ b/xjlib/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
   ~ ModuleName: xjlib
   ~ FileName: strings.xml
   ~ ClassName: strings.xml
-  ~ LastModified: 10/19/17 8:50 AM
+  ~ LastModified: 11/30/17 4:39 PM
   -->
 
 <resources>
